Moved over appendix notes, compiles but WIP

--- a/main.tex
+++ b/main.tex
@@ -14,6 +14,8 @@
 \input{sections/introduction.tex}
 
 
+\input{appendix/appendix.tex}
+
 
 \bibliographystyle{unsrt}
 \bibliography{mybib/mybib.bib}
