--- a/properties/aliases.tex
+++ b/properties/aliases.tex
@@ -17,7 +17,11 @@
 \newcommand{\diag}{\text{diag}\,}
 \newcommand{\sgn}{\text{sgn}}
 \newcommand{\rp}{\right)}
+\newcommand{\te}{\tilde\e}
 \newcommand{\e}{\epsilon}
+\newcommand{\ex}{\epsilon_{xx}}
+\newcommand{\ey}{\epsilon_{yy}}
+\newcommand{\ez}{\epsilon_{zz}}
 \newcommand{\epm}{\end{pmatrix}}
 \newcommand{\ba}{\begin{eqnarray}}
 \newcommand{\ban}{\begin{eqnarray}\nn}
