First part of introduction - still WIP

--- a/preamble/preamble.tex
+++ b/preamble/preamble.tex
@@ -1,5 +1,5 @@
 \begin{center}{\Large \textbf{
-The surface response of an anisotropic Drude model
+The surface screening response of an anisotropic Drude model
 }}\end{center}
 
 \begin{center}
