--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -16,4 +16,4 @@ where each of the axial components has a Drude-like form.  In particular, the di
     \label{dielectric component Drude definition}
     \e_j(\omega) = \e_{j,\infty}\lp 1-\frac{\omega_{p,j}^2}{\omega\lp\omega+i\Gamma\rp}\rp\,\,\,,
 \end{equation}
-where $j\in(x,y,z)$, the $\e_{j,\infty}$ describe inter-band or background dielectric contributions, $\omega_{p,j}$ is the frequency of plasma oscillation along the $j$th axis,\footnote{In particular, the $\omega_{p,j}$ are the physical plasma frequencies that the plasmon would be observed at along the $j$th axis, not the unscreened value $\omega_p=\sqrt{ne^2/m\e_0}$.} and $\Gamma$ is the phenomenological scattering rate.  The choice of an isotropic scattering rate is for convenience; most of the subsequent study will presume well-defined bulk excitations ($\omega\gg\Gamma$), where anisotropic scattering is hopefully not the dominant effect.
+where $j\in(x,y,z)$, the $\e_{j,\infty}$ describe inter-band or background dielectric contributions, $\omega_{p,j}$ is the frequency of plasma oscillation along the $j$th axis,\footnote{In particular, the $\omega_{p,j}$ are the physical plasma frequencies that the plasmon would be observed at along the $j$th axis, not the unscreened value $\omega_p=\sqrt{ne^2/m\e_0}$.} and $\Gamma$ is the phenomenological scattering rate.  The choice of an isotropic scattering rate is for convenience; most of the subsequent study will focus on well-defined bulk excitations ($\omega\gg\Gamma$), where anisotropic scattering is presumed to not be the dominant effect.
