Minor abstract rewording.

--- a/preamble/preamble.tex
+++ b/preamble/preamble.tex
@@ -17,7 +17,7 @@ Christian Boyd
 
 \section*{Abstract}
 {\bf
-The Drude model provides a convenient model of a metallic conduction.  This paper explores how conduction anisotropy at the level of a modified Drude model nevertheless produces interesting features in the surface screening response.  In anisotropic regimes, the surface response is shown to contain the {\it bulk} plasmon spectrum, which I have previously discussed in the context of more complicated models.
+The Drude model provides a convenient model of a metallic conduction.  This paper explores the surface screening response of an anisotropic Drude model.  In certain orientations, the surface response contains the {\it bulk} plasmon spectrum, which has been previously discussed in the context of more complicated models.
 }
 
 \vspace{10pt}
