--- a/main.tex
+++ b/main.tex
@@ -13,6 +13,10 @@
 
 \input{sections/introduction.tex}
 
+\input{sections/section-1.tex}
+
+\input{sections/section-2.tex}
+
 
 \input{appendix/appendix.tex}
 
