--- a/sections/section-1.tex
+++ b/sections/section-1.tex
@@ -8,14 +8,16 @@ This paper examies an anisotropic and homogeneous dielectric tensor,
     \\ 0 & \ey(\omega) & 0
     \\ 0 & 0 & \ez(\omega)
     \epm
-    \,\,\,.
+    \,\,\,,
 \end{equation}
-Further, the diagonal entries of $\e$ \eqref{dielectric tensor definition} resemble the Drude model,
+where the diagonal entries of $\e$ \eqref{dielectric tensor definition} resemble the Drude model,
 \begin{equation}
     \label{dielectric component Drude definition}
-    \e_j(\omega) = \e_{j,\infty}\lp 1-\frac{\omega_{p,j}^2}{\omega\lp\omega+i\Gamma\rp}\rp\,\,\,,
+    \e_j(\omega) = \e_{j,\infty}-\frac{\omega_{j,0}^2}{\omega\lp\omega+i\Gamma\rp}\,\,\,.
 \end{equation}
-where $j\in(x,y,z)$, the $\e_{j,\infty}$ phenomenologically model inter-band or background dielectric contributions, $\omega_{p,j}$ is the frequency of plasma oscillation along the $j$th axis,\footnote{In particular, the $\omega_{p,j}$ are the physical plasma frequencies that the plasmon would be observed at along the $j$th axis, not the unscreened value $\omega_p=\sqrt{ne^2/m\e_0}$.} and $\Gamma$ is the phenomenological scattering rate.  The choice of an isotropic scattering rate is for convenience; most of the subsequent study will focus on well-defined bulk excitations ($\omega\gg\Gamma$), where anisotropic scattering is presumed to not be the dominant effect.
+In \eqref{dielectric component Drude definition}, $j\in(x,y,z)$, $\e_{j,\infty}$ phenomenologically models inter-band or background dielectric contributions oriented along the $j$th axis, $\omega_{j,0}$ is the {\it unscreened} frequency of plasma oscillation along the $j$th axis,\footnote{In particular, $\omega_{j,0}$ would correspond to the unscreened plasma frequency $\omega_{p,0}=\sqrt{ne^2/m\e_0}$ in an isotropic, free-electron model.  Due to the screening associated with $\e_{j,\infty}$, the physical plasma frequency along the $j$th axis in \eqref{dielectric component Drude definition} is suppressed as $\omega_{j,0}/\sqrt{\e_{j,\infty}}$.} and $\Gamma$ is the phenomenological scattering rate.  The choice of an isotropic scattering rate is for convenience; most of the subsequent study will focus on well-defined bulk excitations ($\omega\gg\Gamma$), where anisotropic scattering is presumed to not be the dominant effect.
+
+\note{Todo - consider anisotropic scattering?}
 
 
 
@@ -31,10 +33,38 @@ The bulk electrostatic excitations of the anisotropic dielectric tensor $\e$ of 
 where $\hat q$ is a unit wavevector due to the lack of wavevector dependence in $\e$.  Inverting $\e$,
 \begin{equation}
     \label{bulk loss function}
-    -\im\e^{-1}(\hat q, \omega) = \sum_j \lp\frac{q_j^2}{q^2}\rp \lb -\im\e_{jj}^{-1}(\omega)\rb
+    -\im\e^{-1}(\hat q, \omega) = \sum_{j=x,y,z} \lp\frac{q_j^2}{q^2}\rp \lb -\im\e_{jj}^{-1}(\omega)\rb
     =
-    \sum_j\lp\frac{q_j^2}{q^2}\rp\frac{\im\e_{jj}(\omega)}{|\e_{jj}(\omega)|^2}
+    \sum_{j=x,y,z}\lp\frac{q_j^2}{q^2}\rp\frac{\im\e_{jj}(\omega)}{|\e_{jj}(\omega)|^2}
     \,\,\,.
 \end{equation}
+In the regime of well-defined plasmon excitation, $\Gamma \ll \omega_{j,0}$ for all $j=x,y,z$, the plasmon dispersion roughly follows from zeros in the real part of the {\it longitudinal} dielectric function,
+\begin{equation}
+    \e_L(\hat q,\omega) :=\hat q\cdot \e\cdot\hat q\,\,\,,
+\end{equation}
+where $\hat q$ is a unit wavevector enforcing excitations along the longitudinal direction.  As a first approximation,
+\begin{equation}
+    \label{longitudinal dielectric function without damping}
+    \re\e_L(\hat q, \omega) \approx \e_L(\hat q, \omega)\Big|_{\Gamma = 0}
+    =
+    \sum_{j=x,y,z}q_j^2\lp\e_{j,\infty} - \frac{\omega_{j,0}^2}{\omega^2}\rp
+    \,\,\,,
+\end{equation}
+which determines the plasmon dispersion $\omega_p(\hat q)$ through the positive root,
+\begin{equation}
+    \omega_p(\hat q) \approx 
+    \sqrt{\frac{\sum_{j=x,y,z}q_j^2 \omega_{j,0}^2}{\hat q \cdot \e_{\infty} \cdot \hat q}}
+    \,\,\,.
+\end{equation}
+\note{Add Gumhalter/other references}: This likely needs lots of references about this kind of dielectric function.
 
-\note{Add figure}: not much else to say here.
+In Figure~\ref{figure: anisotropic plasmon spectrum}, the loss function \eqref{bulk loss function} is plotted for the anisotropic Drude model as a function of frequency $\omega$ and orientation $\theta$.  The wavevector orientation $\hat q$ was chosen to lie within the $xy$-plane, where $\theta$ is the azimuthal angle measured counterclockwise from the $x$-axis.  
+
+\begin{figure}
+    \centering
+    % \includegraphics[width=0.5\columnwidth]{figures/superlattice-geometry.pdf}
+    \caption{
+        \note{Todo}: create figure/caption.
+    }
+    \label{figure: anisotropic plasmon spectrum}
+\end{figure}
