Add xurl and unsrturl for urls in citation

--- a/main.tex
+++ b/main.tex
@@ -21,7 +21,7 @@
 \input{appendix/appendix.tex}
 
 
-\bibliographystyle{unsrt}
+\bibliographystyle{unsrturl}
 \bibliography{mybib/mybib.bib}
 
 \end{document}
