Changed directory structure and fleshed out the bulk response/plasmon discussion [needs figure]

--- a/main.tex
+++ b/main.tex
@@ -13,9 +13,7 @@
 
 \input{sections/introduction.tex}
 
-\input{sections/section-1.tex}
-
-\input{sections/section-2.tex}
+\input{sections/the-anisotropic-drude-model/the-anisotropic-drude-model.tex}
 
 
 \input{appendix/appendix.tex}
