Flesh out bulk response (#6)
* Skeleton of the python script

* Add xurl and unsrturl for urls in citation

* Changed directory structure and fleshed out the bulk response/plasmon discussion [needs figure]

--- a/main.tex
+++ b/main.tex
@@ -13,15 +13,13 @@
 
 \input{sections/introduction.tex}
 
-\input{sections/section-1.tex}
-
-\input{sections/section-2.tex}
+\input{sections/the-anisotropic-drude-model/the-anisotropic-drude-model.tex}
 
 
 \input{appendix/appendix.tex}
 
 
-\bibliographystyle{unsrt}
+\bibliographystyle{unsrturl}
 \bibliography{mybib/mybib.bib}
 
 \end{document}
