Added surface response section

--- a/sections/the-anisotropic-drude-model/the-anisotropic-drude-model.tex
+++ b/sections/the-anisotropic-drude-model/the-anisotropic-drude-model.tex
@@ -21,3 +21,5 @@ In \eqref{dielectric component Drude definition}, $j\in(x,y,z)$, $\e_{j,\infty}$
 
 
 \input{sections/the-anisotropic-drude-model/bulk-reponse-plasmon-excitation.tex}
+
+\input{sections/the-anisotropic-drude-model/surface-response-surface-plasmon-excitation.tex}
