Minor text changes in the bulk section

--- a/sections/the-anisotropic-drude-model/bulk-reponse-plasmon-excitation.tex
+++ b/sections/the-anisotropic-drude-model/bulk-reponse-plasmon-excitation.tex
@@ -26,16 +26,16 @@ In the regime of well-defined plasmon excitation ($\Gamma \ll \omega$ for $\omeg
     \sum_{j=x,y,z} \hat q_j^2\lp\e_{j,\infty} - \frac{\omega_{j,0}^2}{\omega^2}\rp
     \,\,\,,
 \end{equation}
-which determines the plasmon dispersion $\omega_p(\hat q)$ through the positive root,
+which determines the plasmon orientation dependence $\omega_p(\hat q)$ through the positive root,
 \begin{equation}
-    \label{approximate plasmon dispersion}
+    \label{approximate plasmon orientation}
     \omega_p(\hat q) \approx 
     \sqrt{\frac{\sum_{j=x,y,z} \hat q_j^2 \omega_{j,0}^2}{\hat q \cdot \e_{\infty} \cdot \hat q}}
     \,\,\,.
 \end{equation}
-We should expect from \eqref{approximate plasmon dispersion} that plasmon excitation smoothly varies from its value along one axis to another as the orientation is rotated between the two.
+We should expect from \eqref{approximate plasmon orientation} that plasmon excitation smoothly varies from its value along one axis to another as the orientation is rotated between the two.
 
-\note{[Add Gumhalter/other references]}: This likely needs lots of references about this kind of dielectric function.
+\note{[Add Gumhalter/other references]}: This likely needs lots of references about this anisotropic dielectric function and the simple plasmon dispersion that results.
 
 In Figure~\ref{figure: anisotropic plasmon spectrum}, the loss function \eqref{bulk loss function} is plotted for the anisotropic Drude model as a function of frequency $\omega$ and orientation $\theta$.  The wavevector orientation $\hat q$ was chosen to lie within the $xy$-plane, where $\theta$ is the azimuthal angle measured counterclockwise from the $x$-axis.  
 
