note on loss function citations

--- a/sections/the-anisotropic-drude-model/bulk-reponse-plasmon-excitation.tex
+++ b/sections/the-anisotropic-drude-model/bulk-reponse-plasmon-excitation.tex
@@ -12,7 +12,7 @@ where $q$ is the wavevector, $\hat q$ is the {\it unit} wavevector, $\omega$ is 
 \end{equation}
 From Gauss's law \eqref{translation invariant Gauss's law}, the system contains a resonant, self-sustaining electrostatic excitation whenever $\e_L$ of \eqref{longitudinal dielectric function} vanishes.  As in the typical free-electron Drude model, this mode corresponds to the plasmon in the anisotropic Drude model of \eqref{dielectric component Drude definition}.
 
-The nature of bulk electrostatic excitations associated with a model dielectric function can be studied through the {\it loss function},
+The nature of bulk electrostatic excitations associated with a model dielectric function can be studied through the {\it loss function} \note{[add citation(s)]},
 \begin{equation}
     \label{bulk loss function}
     -\im \e^{-1}_L(\hat q,\omega) = -\im\frac{1}{\e_L(\hat q,\omega)}
