--- a/properties/aliases.tex
+++ b/properties/aliases.tex
@@ -31,6 +31,7 @@
 \newcommand{\nn}{\nonumber}
 \newcommand{\p}{\mathcal P}
 \newcommand{\qp}{q_{\parallel}}
+\newcommand{\ep}{\e_{\parallel}}
 
 \DeclareMathOperator{\tr}{tr}
 \DeclarePairedDelimiter\bra{\langle}{\rvert}
