--- a/sections/the-anisotropic-drude-model/bulk-reponse-plasmon-excitation.tex
+++ b/sections/the-anisotropic-drude-model/bulk-reponse-plasmon-excitation.tex
@@ -1,11 +1,11 @@
 \subsection{Bulk response: plasmon excitation}
 
-The dielectric tensor $\e$ \eqref{dielectric tensor definition} governs the electrostatic response of the system through Gauss's law.  In a translation-invariant geometry,
+The dielectric tensor $\e$ \eqref{dielectric tensor definition} governs the electrostatic response of the system through Gauss's law.  In a translation-invariant geometry without any externally-sourced free charges,
 \begin{equation}
     \label{translation invariant Gauss's law}
-    \e_L(\hat q,\omega) \phi(q,\omega) = \frac{\rho_{ext}(q,\omega)}{q^2 \e_0}\,\,\,,
+    q^2 \e_L(\hat q,\omega) \phi(q,\omega) = 0\,\,\,,
 \end{equation}
-where $q$ is the wavevector, $\hat q$ is the {\it unit} wavevector, $\omega$ is the frequency, $\phi$ is the (total) electric potential, $\rho_{ext}$ is the free charge density external to the system under study, $\e_0$ is the permitivitty of free space due to working in S.I. units, and we've defined the {\it longitudinal} dielectric function,
+where $q$ is the wavevector, $\hat q$ is the {\it unit} wavevector, $\omega$ is the frequency, $\phi$ is the (total) electric potential, and we've defined the {\it longitudinal} dielectric function,
 \begin{equation}
     \label{longitudinal dielectric function}
     \e_L(\hat q,\omega) := \hat q\cdot \e(\omega)\cdot \hat q\,\,\,.
